src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__album_details_ui__album_details_ui_tests__tests__snapshot_tests__album_details_ui_renders_track_details_over_album_details.snap
---
source: src/ui/lidarr_ui/library/album_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
             ╭  Test Album Details  ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮               
             │ Tracks │ History │ Manual Search                                                                                                      │               
             │──────╭  Track Details  ─────────────────────────────────────────────────────────────────────────────────────────────────────────╮─────│               
             │   #  │ Track Details │ History                                                                                                  │     │               
             │=> 1  │──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│     │               
             │      │Some details:                                                                                                             │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯     │               
             │                                                                                                                                       │               
             ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
